fix: directories clean up

--- a/SHACL_advanced_features_explorer.ipynb
+++ b/SHACL_advanced_features_explorer.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SHACL Advanced features and constraints explorer"
+    "# SHACL Advanced features and constraints explorer\n",
+    "\n",
+    "This notebook is a tool to explore the SHACL advanced features and constraints. It is based on the [SHACL Playground](https://shacl.org/playground/) and the [SHACL documentation](https://www.w3.org/TR/shacl/).\n"
    ]
   },
   {
@@ -17,6 +19,8 @@
     "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import pyshacl\n",
     "\n",
     "# inline matplotlib plotting in jupyter notebook\n",
     "\n",
