feat: initial pyshacl support added to notebook

--- a/SHACL_advanced_features_explorer.ipynb
+++ b/SHACL_advanced_features_explorer.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "# SHACL Advanced features and constraints explorer\n",
     "\n",
-    "This notebook is a tool to explore the SHACL advanced features and constraints. It is based on the [SHACL Playground](https://shacl.org/playground/) and the [SHACL documentation](https://www.w3.org/TR/shacl/).\n"
+    "This notebook is a tool to explore the SHACL advanced features and constraints. It is based on the [SHACL Playground](https://shacl.org/playground/) and the [SHACL documentation](https://www.w3.org/TR/shacl/).\n",
+    "\n",
+    "For pyshacl, see the [pyshacl documentation](https://pyshacl.readthedocs.io/en/latest/) and the [pyshacl AF issue](https://github.com/RDFLib/pySHACL/issues/189)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +22,73 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import pyshacl\n",
-    "\n",
+    "from pyshacl import Validator\n",
+    "from rdflib import Graph\n",
     "# inline matplotlib plotting in jupyter notebook\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SHACL Advanced Features (AF) with pyshacl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "g = Graph()\n",
+    "\n",
+    "smts = \"\"\"\n",
+    "@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .\n",
+    "@prefix C: <http://example.org/> .\n",
+    "@prefix ex: <http://example.org/> .\n",
+    "\n",
+    "C:A rdfs:subClassOf C:B . \n",
+    "ex:something a C:A .\n",
+    "\"\"\"\n",
+    "\n",
+    "g.parse(data=smts)\n",
+    "v = Validator(g,\n",
+    "      inference='rdfs',\n",
+    "      advanced=True)\n",
+    "\n",
+    "v.run()\n",
+    "print(v.target_graph.serialize(format='ttl'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# target graph method\n",
+    "\n",
+    "v = Validator(g, shacl_graph=myshapes, options={\"advanced\": True, \"inference\": \"rdfs\"})\n",
+    "conforms, report_graph, report_text = v.run()\n",
+    "expanded_graph = v.target_graph #<-- This gets the expanded data graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inplace modifier\n",
+    "\n",
+    "\n",
+    "v = Validator(g, shacl_graph=myshapes, options={\"advanced\": True, \"inplace\": True, \"inference\": \"rdfs\"})\n",
+    "conforms, report_graph, report_text = v.run()\n",
+    "g #<-- g is expanded inplace"
    ]
   },
   {
