--- a/jupyter/SHACL_advanced_features_explorer.ipynb
+++ b/jupyter/SHACL_advanced_features_explorer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = \"\"\"\n",
+    "@prefix cml: <http://www.xml-cml.org/schema/cml2/core#> .\n",
+    "@prefix ro: <http://www.example.org/reaction-ontology#> .\n",
+    "@prefix ex: <http://www.example.org/chemicals#> .\n",
+    "\n",
+    "# Define reactants and products with their chemical structures\n",
+    "ex:Reactant1 cml:chemicalStructure \"SMILES:CCO\" .  # Ethanol\n",
+    "ex:Reactant2 cml:chemicalStructure \"SMILES:O=C=O\" .  # Carbon dioxide\n",
+    "ex:Reactant3 cml:chemicalStructure \"SMILES:CC(=O)O\" .  # Acetic acid\n",
+    "ex:Reactant4 cml:chemicalStructure \"SMILES:H2O\" .  # Water\n",
+    "ex:Reactant5 cml:chemicalStructure \"SMILES:O2\" .  # Oxygen\n",
+    "\n",
+    "ex:Product1 cml:chemicalStructure \"SMILES:CCOCC(=O)O\" .  # Ethyl acetate\n",
+    "ex:Product2 cml:chemicalStructure \"SMILES:CCOCC\" .  # Diethyl ether\n",
+    "ex:Product3 cml:chemicalStructure \"SMILES:COO\" .  # Formate\n",
+    "ex:Product4 cml:chemicalStructure \"SMILES:CCOCO\" .  # Ethylene glycol\n",
+    "\n",
+    "# Idealized Reaction 1: Ethanol + Carbon dioxide -> Ethyl acetate\n",
+    "ex:IdealReaction1 a ro:Reaction ;\n",
+    "                  ro:type \"idealized\" ;\n",
+    "                  ro:hasReactant ex:Reactant1 , ex:Reactant2 ;\n",
+    "                  ro:hasProduct ex:Product1 .\n",
+    "\n",
+    "# Idealized Reaction 2: Acetic acid -> Diethyl ether + Formate\n",
+    "ex:IdealReaction2 a ro:Reaction ;\n",
+    "                  ro:type \"idealized\" ;\n",
+    "                  ro:hasReactant ex:Reactant3 ;\n",
+    "                  ro:hasProduct ex:Product2 , ex:Product3 .\n",
+    "\n",
+    "# Idealized Reaction 3: Ethanol -> Ethylene glycol\n",
+    "ex:IdealReaction3 a ro:Reaction ;\n",
+    "                  ro:type \"idealized\" ;\n",
+    "                  ro:hasReactant ex:Reactant1 ;\n",
+    "                  ro:hasProduct ex:Product4 .\n",
+    "\n",
+    "# Experimental Reaction 1: Matches Idealized Reaction 1 exactly\n",
+    "ex:ExperimentReaction1 a ro:Reaction ;\n",
+    "                       ro:type \"experimental\" ;\n",
+    "                       ro:hasReactant ex:Reactant1 , ex:Reactant2 ;\n",
+    "                       ro:hasProduct ex:Product1 .\n",
+    "\n",
+    "# Experimental Reaction 2: Matches Idealized Reaction 2 with an additional reactant (Water)\n",
+    "ex:ExperimentReaction2 a ro:Reaction ;\n",
+    "                       ro:type \"experimental\" ;\n",
+    "                       ro:hasReactant ex:Reactant3 , ex:Reactant4 ;  # Additional reactant (Water)\n",
+    "                       ro:hasProduct ex:Product2 , ex:Product3 .\n",
+    "\n",
+    "# Experimental Reaction 3: More reactants but matches Idealized Reaction 1 in relevant reactants and products\n",
+    "ex:ExperimentReaction3 a ro:Reaction ;\n",
+    "                       ro:type \"experimental\" ;\n",
+    "                       ro:hasReactant ex:Reactant1 , ex:Reactant2 , ex:Reactant4 ;  # Additional reactant (Water)\n",
+    "                       ro:hasProduct ex:Product1 .\n",
+    "\n",
+    "# Experimental Reaction 4: Correct reactants for Idealized Reaction 1 but incorrect product\n",
+    "ex:ExperimentReaction4 a ro:Reaction ;\n",
+    "                       ro:type \"experimental\" ;\n",
+    "                       ro:hasReactant ex:Reactant1 , ex:Reactant2 ;\n",
+    "                       ro:hasProduct ex:Product2 .  # Incorrect product\n",
+    "\n",
+    "# Experimental Reaction 5: Matches Idealized Reaction 3 with an additional reactant (Oxygen)\n",
+    "ex:ExperimentReaction5 a ro:Reaction ;\n",
+    "                       ro:type \"experimental\" ;\n",
+    "                       ro:hasReactant ex:Reactant1 , ex:Reactant5 ;  # Additional reactant (Oxygen)\n",
+    "                       ro:hasProduct ex:Product4 .\n",
+    "\n",
+    "# Experimental Reaction 6: Non-matching reaction with entirely different products\n",
+    "ex:ExperimentReaction6 a ro:Reaction ;\n",
+    "                       ro:type \"experimental\" ;\n",
+    "                       ro:hasReactant ex:Reactant2 , ex:Reactant4 ;  # Different set of reactants\n",
+    "                       ro:hasProduct ex:Product3 .  # Different product\n",
+    "\"\"\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Graph identifier=N0af77fc8e04448a69d910d5e82b3eb2b (<class 'rdflib.graph.Graph'>)>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = rdflib.Graph()\n",
+    "g.parse(data=data, format=\"turtle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +277,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knows_query = \"\"\"\n",
+    "PREFIX cml: <http://www.xml-cml.org/schema/cml2/core#>\n",
+    "PREFIX ro: <http://www.example.org/reaction-ontology#>\n",
+    "\n",
+    "SELECT  ?idealReaction  (GROUP_CONCAT(DISTINCT ?idealReactantStructure ; separator=\",\") AS ?idealReactantsList) \n",
+    "                            (GROUP_CONCAT(DISTINCT ?idealProductStructure ; separator=\",\") AS ?idealProductsList)\n",
+    "    WHERE {\n",
+    "      ?idealReaction ro:hasReactant ?idealReactant .\n",
+    "      ?idealReactant cml:chemicalStructure ?idealReactantStructure .\n",
+    "      \n",
+    "      ?idealReaction ro:hasProduct ?idealProduct .\n",
+    "      ?idealProduct cml:chemicalStructure ?idealProductStructure .\n",
+    "    }\n",
+    "    GROUP BY ?idealReaction\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ideal Reaction:  http://www.example.org/chemicals#IdealReaction1\n",
+      "Ideal Reactant List:  SMILES:CCO,SMILES:O=C=O\n",
+      "Product List: SMILES:CCOCC(=O)O\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#ExperimentReaction1\n",
+      "Ideal Reactant List:  SMILES:CCO,SMILES:O=C=O\n",
+      "Product List: SMILES:CCOCC(=O)O\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#ExperimentReaction3\n",
+      "Ideal Reactant List:  SMILES:CCO,SMILES:O=C=O,SMILES:H2O\n",
+      "Product List: SMILES:CCOCC(=O)O\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#IdealReaction2\n",
+      "Ideal Reactant List:  SMILES:CC(=O)O\n",
+      "Product List: SMILES:CCOCC,SMILES:COO\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#ExperimentReaction2\n",
+      "Ideal Reactant List:  SMILES:CC(=O)O,SMILES:H2O\n",
+      "Product List: SMILES:CCOCC,SMILES:COO\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#ExperimentReaction4\n",
+      "Ideal Reactant List:  SMILES:CCO,SMILES:O=C=O\n",
+      "Product List: SMILES:CCOCC\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#ExperimentReaction6\n",
+      "Ideal Reactant List:  SMILES:O=C=O,SMILES:H2O\n",
+      "Product List: SMILES:COO\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#IdealReaction3\n",
+      "Ideal Reactant List:  SMILES:CCO\n",
+      "Product List: SMILES:CCOCO\n",
+      "Ideal Reaction:  http://www.example.org/chemicals#ExperimentReaction5\n",
+      "Ideal Reactant List:  SMILES:CCO,SMILES:O2\n",
+      "Product List: SMILES:CCOCO\n"
+     ]
+    }
+   ],
+   "source": [
+    "## SPARQL Query\n",
+    "\n",
+    "for r in g.query(knows_query):\n",
+    "    print(\"Ideal Reaction: \", r[\"idealReaction\"])\n",
+    "    print(\"Ideal Reactant List: \",r[\"idealReactantsList\"])\n",
+    "    print(\"Product List:\", r[\"idealProductsList\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +360,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@prefix cml: <http://www.xml-cml.org/schema/cml2/core#> .\n",
+      "@prefix ex: <http://www.example.org/chemicals#> .\n",
+      "@prefix ro: <http://www.example.org/reaction-ontology#> .\n",
+      "\n",
+      "ex:ExperimentReaction1 a ex:IdealReaction1,\n",
+      "        ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product1 ;\n",
+      "    ro:hasReactant ex:Reactant1,\n",
+      "        ex:Reactant2 ;\n",
+      "    ro:type \"experimental\" .\n",
+      "\n",
+      "ex:ExperimentReaction2 a ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product2,\n",
+      "        ex:Product3 ;\n",
+      "    ro:hasReactant ex:Reactant3,\n",
+      "        ex:Reactant4 ;\n",
+      "    ro:type \"experimental\" .\n",
+      "\n",
+      "ex:ExperimentReaction3 a ex:IdealReaction1,\n",
+      "        ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product1 ;\n",
+      "    ro:hasReactant ex:Reactant1,\n",
+      "        ex:Reactant2,\n",
+      "        ex:Reactant4 ;\n",
+      "    ro:type \"experimental\" .\n",
+      "\n",
+      "ex:ExperimentReaction4 a ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product2 ;\n",
+      "    ro:hasReactant ex:Reactant1,\n",
+      "        ex:Reactant2 ;\n",
+      "    ro:type \"experimental\" .\n",
+      "\n",
+      "ex:ExperimentReaction5 a ex:IdealReaction3,\n",
+      "        ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product4 ;\n",
+      "    ro:hasReactant ex:Reactant1,\n",
+      "        ex:Reactant5 ;\n",
+      "    ro:type \"experimental\" .\n",
+      "\n",
+      "ex:ExperimentReaction6 a ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product3 ;\n",
+      "    ro:hasReactant ex:Reactant2,\n",
+      "        ex:Reactant4 ;\n",
+      "    ro:type \"experimental\" .\n",
+      "\n",
+      "ex:IdealReaction2 a ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product2,\n",
+      "        ex:Product3 ;\n",
+      "    ro:hasReactant ex:Reactant3 ;\n",
+      "    ro:type \"idealized\" .\n",
+      "\n",
+      "ex:IdealReaction3 a ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product4 ;\n",
+      "    ro:hasReactant ex:Reactant1 ;\n",
+      "    ro:type \"idealized\" .\n",
+      "\n",
+      "ex:Reactant5 cml:chemicalStructure \"SMILES:O2\" .\n",
+      "\n",
+      "ex:IdealReaction1 a ro:Reaction ;\n",
+      "    ro:hasProduct ex:Product1 ;\n",
+      "    ro:hasReactant ex:Reactant1,\n",
+      "        ex:Reactant2 ;\n",
+      "    ro:type \"idealized\" .\n",
+      "\n",
+      "ex:Product4 cml:chemicalStructure \"SMILES:CCOCO\" .\n",
+      "\n",
+      "ex:Reactant3 cml:chemicalStructure \"SMILES:CC(=O)O\" .\n",
+      "\n",
+      "ex:Product1 cml:chemicalStructure \"SMILES:CCOCC(=O)O\" .\n",
+      "\n",
+      "ex:Product2 cml:chemicalStructure \"SMILES:CCOCC\" .\n",
+      "\n",
+      "ex:Product3 cml:chemicalStructure \"SMILES:COO\" .\n",
+      "\n",
+      "ex:Reactant4 cml:chemicalStructure \"SMILES:H2O\" .\n",
+      "\n",
+      "ex:Reactant2 cml:chemicalStructure \"SMILES:O=C=O\" .\n",
+      "\n",
+      "ex:Reactant1 cml:chemicalStructure \"SMILES:CCO\" .\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "graph_ttl = g.serialize(format='turtle')\n",
     "\n",
-    "print(graph_ttl)"
+    "print(graph_ttl)\n"
    ]
   },
   {
