feat: improved SHACL graph visualisation using graphviz / dot; small corrections on the taxonomies

--- a/jupyter/SHACL_tutorial_simple_skos.ipynb
+++ b/jupyter/SHACL_tutorial_simple_skos.ipynb
@@ -17,7 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install pydotplus\n",
+    "! pip install graphviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +40,25 @@
     "from rdflib import Graph\n",
     "# inline matplotlib plotting in jupyter notebook\n",
     "\n",
+    "import io\n",
+    "import pydotplus\n",
+    "from IPython.display import display, Image\n",
+    "\n",
+    "\n",
+    "# dot graph visualization\n",
+    "\n",
+    "from rdflib.tools.rdf2dot import rdf2dot\n",
+    "\n",
+    "# register rdf2dot plugin with rdflib\n",
+    "\n",
+    "rdflib.plugin.register('dot', rdflib.tools.rdf2dot, 'RDF2DOT', 'RDF2DOT')\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,12 +131,62 @@
     "\n",
     "shdemo:City-capitalOf\n",
     "    a sh:PropertyShape ;\n",
-    "    sh:path shdemo:capital ;\n",
-    "    sh:inversePath shdemo:Country-capital ;\n",
-    "    sh:name \"capitalOf\"@en ;\n",
+    "    sh:path [ \n",
+    "        sh:inversePath shdemo:Country-capital ;\n",
+    "        ] ;\n",
+    "    sh:class shdemo:Country ;\n",
+    "    sh:name \"capital of\"@en ;\n",
     "    .\n",
     "\n",
     "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# s. for more info:  https://stackoverflow.com/questions/39274216/visualize-an-rdflib-graph-in-python\n",
+    "\n",
+    "def visualize(g):\n",
+    "    stream = io.StringIO()\n",
+    "    rdf2dot(g, stream, opts = {display})\n",
+    "    dg = pydotplus.graph_from_dot_data(stream.getvalue())\n",
+    "    png = dg.create_png()\n",
+    "    display(Image(png))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = Graph()\n",
+    "g.parse(data=simple_skos_ttl_graph, format=\"turtle\")\n",
+    "g.serialize(format=\"turtle\")\n",
+    "\n",
+    "visualize(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## visualize the graph\n",
+    "\n",
+    "g = Graph()\n",
+    "g.parse(data=simple_skos_ttl_graph, format=\"turtle\")\n",
+    "g.serialize(format=\"turtle\")\n",
+    "\n",
+    "# visualize the graph\n",
+    "\n",
+    "# dot = g.serialize(format='dot')\n",
+    "# with open(\"simple_skos_graph.dot\", \"wb\") as f:\n",
+    "#     f.write(dot)\n"
    ]
   },
   {
@@ -123,17 +196,16 @@
    "outputs": [],
    "source": [
     "shape_graph = rdflib.Graph()\n",
-    "shape_graph.parse(data=simple_skos_ttl_graph, format=\"turtle\")\n",
-    "\n"
+    "shape_graph.parse(data=simple_skos_ttl_graph, format=\"turtle\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a Dataset that fullfills the SHACL constraints\n",
+    "# create a Dataset that fullfills the SHACL constraints by instantiating the classes and properties defined in the ontology\n",
     "\n",
     "valid_dataset = \"\"\"\n",
     "@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .\n",
@@ -142,27 +214,28 @@
     "@prefix owl: <http://www.w3.org/2002/07/owl#> .\n",
     "@prefix sh: <http://www.w3.org/ns/shacl#> .\n",
     "@prefix skos: <http://www.w3.org/2004/02/skos/core#> .\n",
-    "\n",
-    "@prefix ex: <http://example.org/> .\n",
     "@prefix shdemo: <http://w3id.org/oso/shacl-skos-demo-ontology/> .\n",
     "\n",
-    "ex:Germany a shdemo:Country ;\n",
+    "@prefix extax: <http://example.org/example-taxonomy> .\n",
+    "\n",
+    "\n",
+    "extax:Germany a shdemo:Country ;\n",
     "    shdemo:isoCode \"DE\" ;\n",
     "    shdemo:capital \"Berlin\" ;\n",
     "    shdemo:population 3769495 ;\n",
     "    .\n",
     "\n",
-    "ex:Berlin a shdemo:City ;\n",
+    "extax:Berlin a shdemo:City ;\n",
     "    shdemo:population 3769495 ;\n",
     "    .\n",
     "\n",
-    "ex:France a shdemo:Country ;\n",
+    "extax:France a shdemo:Country ;\n",
     "    shdemo:isoCode \"FR\" ;\n",
     "    shdemo:capital \"Paris\" ;\n",
     "    shdemo:population 2140526 ;\n",
     "    .\n",
     "\n",
-    "ex:Paris a shdemo:City ;\n",
+    "extax:Paris a shdemo:City ;\n",
     "    shdemo:population 2140526 ;\n",
     "    .\n",
     "\n",
@@ -171,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,39 +256,39 @@
     "@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .\n",
     "@prefix owl: <http://www.w3.org/2002/07/owl#> .\n",
     "@prefix sh: <http://www.w3.org/ns/shacl#> .\n",
-    "\n",
     "@prefix skos: <http://www.w3.org/2004/02/skos/core#> .\n",
-    "@prefix ex: <http://example.org/> .\n",
     "@prefix shdemo: <http://w3id.org/oso/shacl-skos-demo-ontology/> .\n",
     "\n",
-    "ex:Germany a shdemo:Country ;\n",
+    "@prefix extax: <http://example.org/example-taxonomy> .\n",
+    "\n",
+    "extax:Germany a shdemo:Country ;\n",
     "    shdemo:isoCode \"DE3\" ;\n",
     "    shdemo:capital \"Berlin\" ;\n",
     "    shdemo:population 0 ;\n",
     "    .\n",
     "\n",
-    "ex:Berlin a shdemo:City ;\n",
+    "extax:Berlin a shdemo:City ;\n",
     "    shdemo:population 3769495 ;\n",
     "    .\n",
     "\n",
-    "ex:France a shdemo:Country ;\n",
+    "extax:France a shdemo:Country ;\n",
     "    shdemo:isoCode \"fr\" ;\n",
     "    shdemo:capital \"Paris\" ;\n",
     "    shdemo:population 2140526 ;\n",
     "    .\n",
     "\n",
-    "ex:Paris a shdemo:City ;\n",
+    "extax:Paris a shdemo:City ;\n",
     "    shdemo:population 2140526 ;\n",
     "    .\n",
     "\n",
-    "ex:Italy a shdemo:Country ;\n",
+    "extax:Italy a shdemo:Country ;\n",
     "    shdemo:isoCode \"ITA\" ;\n",
     "    shdemo:capital \"Rome\" ;\n",
     "    shdemo:capital \"Paris\" ;\n",
     "    shdemo:population 2872800 ;\n",
     "    .\n",
     "\n",
-    "ex:Rome a shdemo:City ;\n",
+    "extax:Rome a shdemo:City ;\n",
     "    shdemo:population 0 ;\n",
     "    .\n",
     "\n",
@@ -272,6 +345,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further applications of the SHACL ontology\n",
+    "\n",
+    "next to validation of RDF data, which was demonstrated above, SHACL can also be used for:\n",
+    "\n",
+    "- automatic data generation\n",
+    "- data curation (suggestion of missing data or corrections)\n",
+    "- data transformation\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -279,10 +365,27 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Property Groups"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Orders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
